fix differences in java